<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/main_menu">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_location"
                    android:icon="@drawable/ic_place_black_24dp"
                    android:title="@string/location"/>
                <item
                    android:id="@+id/nav_data_edit"
                    android:icon="@drawable/ic_edit_black_24dp"
                    android:title="@string/data_edit"/>
                <item
                        android:id="@+id/nav_reports"
                        android:icon="@drawable/ic_assignment_black_24dp"
                        android:title="@string/reports"/>
                <item
                        android:id="@+id/nav_reservations"
                        android:icon="@drawable/ic_insert_invitation_black_24dp"
                        android:title="@string/reservations"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/user_options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_input_black_24dp"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_keyboard_backspace_black_24dp"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>
</menu>