<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.dudas.sportanalytic.ui.data_edit.product.data_edit_product.edit_product.create_new_multiple_products.CreateNewMultipleProductsFragmentViewModel" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ScrollView
                android:id="@+id/product_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

            <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </ScrollView>

        <ScrollView
                android:id="@+id/sv_new_edit_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:layout_margin="8dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/np_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/edit_name"
                            android:afterTextChanged="@{()->viewModel.isFormValid()}"
                            android:text="@={viewModel.productName}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/np_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/from"
                            android:inputType="number"
                            android:afterTextChanged="@{()->viewModel.isFormValid()}"
                            android:text="@={viewModel.from}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/np_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/to"
                            android:inputType="number"
                            android:afterTextChanged="@{()->viewModel.isFormValid()}"
                            android:text="@={viewModel.to}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/product_insert_save"
                        android:enabled="false"
                        android:text="@string/insert"
                        android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->viewModel.onInsertUpdateClick()}"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</layout>