<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.dudas.sportanalytic.ui.location.LocationFragmentViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/ll_txt_data_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background">

            <TextView
                    android:id="@+id/txt_data_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:text="@string/location" />

        </RelativeLayout>

        <ScrollView
                android:id="@+id/sv_location_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </ScrollView>

        <ScrollView
                android:id="@+id/sv_location"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_location" />

                <Spinner
                        android:id="@+id/spinner_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_marginBottom="20dp"/>

                <Button
                        android:id="@+id/btn_edit_company_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        android:onClick="@{()->viewModel.locationSave()}"
                        android:text="@string/save" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>